[gd_scene load_steps=5 format=3 uid="uid://ydvb7lji1qrq"]

[ext_resource type="Script" uid="uid://8yj2i6goht8g" path="res://Scripts/Tab.gd" id="1_3dip1"]
[ext_resource type="PackedScene" uid="uid://bxco2jug7bp4s" path="res://Scenes/OpenRepo.tscn" id="2_qq3vb"]
[ext_resource type="PackedScene" uid="uid://cgfop7y1qc2hk" path="res://Scenes/CreateRepo.tscn" id="3_4bvcn"]
[ext_resource type="PackedScene" uid="uid://bk4uexmv8av8k" path="res://Scenes/RepoView.tscn" id="3_qeu5h"]

[node name="Tab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3dip1")

[node name="RepoView" parent="." instance=ExtResource("3_qeu5h")]
visible = false
layout_mode = 1

[node name="OpenCreate" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="OpenCreate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1

[node name="CreateRepo" parent="OpenCreate/TabContainer" instance=ExtResource("3_4bvcn")]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="OpenRepo" parent="OpenCreate/TabContainer" instance=ExtResource("2_qq3vb")]
layout_mode = 2
metadata/_tab_index = 1

[connection signal="created_repo" from="OpenCreate/TabContainer/CreateRepo" to="." method="_on_create_repo_created_repo"]
[connection signal="open_repo" from="OpenCreate/TabContainer/OpenRepo" to="." method="_on_open_repo_open_repo"]
